--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -186,6 +186,13 @@ call CodeGen.exe</Command>
     <ClInclude Include="CC_StatesScript.h" />
     <ClInclude Include="CHitBoxScript.h" />
     <ClInclude Include="CIdleStateScript.h" />
+    <ClInclude Include="CM_Annointed_FSMScript.h" />
+    <ClInclude Include="CM_Annointed_StatesScript.h" />
+    <ClInclude Include="CM_Annointed_STATE_Atk_Script.h" />
+    <ClInclude Include="CM_Annointed_STATE_Damaged_Script.h" />
+    <ClInclude Include="CM_Annointed_STATE_Dead_Script.h" />
+    <ClInclude Include="CM_Annointed_STATE_Idle_Script.h" />
+    <ClInclude Include="CM_Annointed_STATE_Move_Script.h" />
     <ClInclude Include="CM_Lurker_STATE_Damaged_Script.h" />
     <ClInclude Include="CM_Lurker_STATE_Dead_Script.h" />
     <ClInclude Include="CM_Lurker_STATE_Idle_Script.h" />
@@ -224,6 +231,13 @@ call CodeGen.exe</Command>
     <ClCompile Include="CC_StatesScript.cpp" />
     <ClCompile Include="CHitBoxScript.cpp" />
     <ClCompile Include="CIdleStateScript.cpp" />
+    <ClCompile Include="CM_Annointed_FSMScript.cpp" />
+    <ClCompile Include="CM_Annointed_StatesScript.cpp" />
+    <ClCompile Include="CM_Annointed_STATE_Atk_Script.cpp" />
+    <ClCompile Include="CM_Annointed_STATE_Damaged_Script.cpp" />
+    <ClCompile Include="CM_Annointed_STATE_Dead_Script.cpp" />
+    <ClCompile Include="CM_Annointed_STATE_Idle_Script.cpp" />
+    <ClCompile Include="CM_Annointed_STATE_Move_Script.cpp" />
     <ClCompile Include="CM_Lurker_STATE_Damaged_Script.cpp" />
     <ClCompile Include="CM_Lurker_STATE_Dead_Script.cpp" />
     <ClCompile Include="CM_Lurker_STATE_Idle_Script.cpp" />
