--- a/Project/Script/Script.vcxproj.filters
+++ b/Project/Script/Script.vcxproj.filters
@@ -91,6 +91,9 @@
     <Filter Include="Script\Creature\Monster\M_Scripts">
       <UniqueIdentifier>{d0454306-9168-4a03-96ed-5f6dab587f38}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Script\Creature\Monster\M_Scripts\Spider">
+      <UniqueIdentifier>{49b4f726-fded-4c98-ac5a-75770431b3ad}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -234,6 +237,9 @@
     <ClInclude Include="CB_STATEHealScript.h">
       <Filter>Script\Creature\Boss\B_States</Filter>
     </ClInclude>
+    <ClInclude Include="CM_Spider_Proj_Script.h">
+      <Filter>Script\Creature\Monster\M_Scripts\Spider</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -376,6 +382,9 @@
     </ClCompile>
     <ClCompile Include="CB_STATEHealScript.cpp">
       <Filter>Script\Creature\Boss\B_States</Filter>
+    </ClCompile>
+    <ClCompile Include="CM_Spider_Proj_Script.cpp">
+      <Filter>Script\Creature\Monster\M_Scripts\Spider</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
