--- a/Project/Script/Script.vcxproj.filters
+++ b/Project/Script/Script.vcxproj.filters
@@ -237,8 +237,8 @@
     <ClInclude Include="CB_STATEHealScript.h">
       <Filter>Script\Creature\Boss\B_States</Filter>
     </ClInclude>
-    <ClInclude Include="CM_Spider_Proj_Script.h">
-      <Filter>Script\Creature\Monster\M_Scripts\Spider</Filter>
+    <ClInclude Include="CP_STATEStaggerScript.h">
+      <Filter>Script\Creature\Player\P_States</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -383,8 +383,8 @@
     <ClCompile Include="CB_STATEHealScript.cpp">
       <Filter>Script\Creature\Boss\B_States</Filter>
     </ClCompile>
-    <ClCompile Include="CM_Spider_Proj_Script.cpp">
-      <Filter>Script\Creature\Monster\M_Scripts\Spider</Filter>
+    <ClCompile Include="CP_STATEStaggerScript.cpp">
+      <Filter>Script\Creature\Player\P_States</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
