자잘한거 정리(머지 받으려고 커밋)

--- a/Project/Script/Script.vcxproj.filters
+++ b/Project/Script/Script.vcxproj.filters
@@ -237,6 +237,9 @@
     <ClInclude Include="CM_Spider_Proj_Script.h">
       <Filter>Script\Creature\Monster\M_Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="CP_STATEStaggerScript.h">
+      <Filter>Script\Creature\Player\P_States</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -382,6 +385,9 @@
     </ClCompile>
     <ClCompile Include="CM_Spider_Proj_Script.cpp">
       <Filter>Script\Creature\Monster\M_Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="CP_STATEStaggerScript.cpp">
+      <Filter>Script\Creature\Player\P_States</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
