카메라 고치는중

--- a/Project/Script/Script.vcxproj.filters
+++ b/Project/Script/Script.vcxproj.filters
@@ -246,6 +246,9 @@
     <ClInclude Include="CP_STATEStaggerScript.h">
       <Filter>Script\Creature\Player\P_States</Filter>
     </ClInclude>
+    <ClInclude Include="CP_CombatScript.h">
+      <Filter>Script\Creature\Player\Module</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -397,6 +400,9 @@
     </ClCompile>
     <ClCompile Include="CP_STATEStaggerScript.cpp">
       <Filter>Script\Creature\Player\P_States</Filter>
+    </ClCompile>
+    <ClCompile Include="CP_CombatScript.cpp">
+      <Filter>Script\Creature\Player\Module</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
