tHitInfo struct로 이동

--- a/Project/Script/Script.vcxproj.filters
+++ b/Project/Script/Script.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClInclude Include="CM_Spider_proj_Explosion_Script.h">
       <Filter>Script\Creature\Monster\M_Scripts\Spider</Filter>
     </ClInclude>
+    <ClInclude Include="CP_CombatScript.h">
+      <Filter>Script\Creature\Player\Module</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -409,6 +412,9 @@
     </ClCompile>
     <ClCompile Include="CM_Spider_proj_Explosion_Script.cpp">
       <Filter>Script\Creature\Monster\M_Scripts\Spider</Filter>
+    </ClCompile>
+    <ClCompile Include="CP_CombatScript.cpp">
+      <Filter>Script\Creature\Player\Module</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
