--- a/Project/Script/Script.vcxproj.filters
+++ b/Project/Script/Script.vcxproj.filters
@@ -94,6 +94,9 @@
     <Filter Include="Script\Creature\Monster\M_Scripts\Spider">
       <UniqueIdentifier>{49b4f726-fded-4c98-ac5a-75770431b3ad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Script\Creature\Boss\B_Proj">
+      <UniqueIdentifier>{635078c2-6eb5-4520-92b8-9c29ce8d3070}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -255,6 +258,9 @@
     <ClInclude Include="CP_CombatScript.h">
       <Filter>Script\Creature\Player\Module</Filter>
     </ClInclude>
+    <ClInclude Include="CB_RangeBallScript.h">
+      <Filter>Script\Creature\Boss\B_Proj</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -415,6 +421,9 @@
     </ClCompile>
     <ClCompile Include="CP_CombatScript.cpp">
       <Filter>Script\Creature\Player\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="CB_RangeBallScript.cpp">
+      <Filter>Script\Creature\Boss\B_Proj</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
